z-index fixes for drop down in products

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -3502,6 +3502,7 @@ div.wide.form{
 }
 
 .has-model-select{
+	z-index: 0;
 	clear:left;
 	padding:0 !important;
 	input{
